# nuclear-project

./: AtomicNodes.md  BuildingBlockNodes.md  Cesium80.md  CodeGenerator.md  Controller.md  CubicWaveshaper.md  Design.md  DeveloperReadingList.md  DigitalFilters.md  EngineGUI.md  Grouping.md  IntegratedDevelopmentEnvironment.md  KeyFrameParameterization.md  LowLatencyFFT.md  NuclearGUIConcepts.md  OldFrontPage.md  Oversampling.md  Polyphony.md  ProjectHome.md  Requirements.md  ResonanceFilter.md  SmartMatrix.md  SoftwareDevelopmentKit.md  Uranium.md
nuclear-project/wiki/: EngineArchitecture.wiki
sandbox/dssi_plugin/: CMakeLists.txt  organ_synth.cpp
sandbox/graph/: faust.h  utility.h
sandbox/jack_client/: CMakeLists.txt  demo1.cpp  demo2.cpp  demo4.cpp  organ_voice.h  osci.dsp.in  osci_voice.h  simple_monophonic.cpp  simple_organ.cpp  simple_polyphonic.cpp
sandbox/lv2_plugin/: test.cpp
sandbox/performer/: sequencer.h
sdk/: CMakeLists.txt  audio_processor.h  engine.h  jack_client.h  midi.h  midi_processor.h  namespaces.h  synth_descriptor.h  ui.h  voice.h
sdk/common/: dssi_plugin.h  exception.h  oscui.h  paramui.h  preset_manager.h  utility.h
sdk/dssi/: CMakeLists.txt  dssi.h  dssi_plugin.h  namespace.h
sdk/dssi/common/: CMakeLists.txt  dssi_descriptor_builder.h  dssi_plugin.h
sdk/faust/: UI.h  dsp.h  faust.h
sdk/faust/common/: CMakeLists.txt  oscui.h  paramui.h
sdk/jack/: CMakeLists.txt  jack.h
sdk/jack/common/: jack_client.h
sdk/ladspa/: ladspa.h
sdk/ladspa/common/: CMakeLists.txt  ladspa_descriptor_builder.h  ladspa_plugin.h
sdk/lv2/: CMakeLists.txt  lv2_event.ttl  lv2_plugin.h
sdk/lv2/common/: lv2_plugin.h
toys/graph/: README  block.h  voice.cpp  voice.h
toys/jack_client/: CMakeLists.txt  demo2.cpp  demo3.cpp  jack_client.cpp  jack_client.h  main.cpp
toys/performer/: commands.h  main.cpp
trunk/: CMakeLists.txt
trunk/docs/doxygen/: CMakeLists.txt
trunk/sandbox/DSP/: digraph.h  dsp.h  dsp_template.h
trunk/sandbox/dssi_plugin/: organ_synth.cpp  organ_voice.h
trunk/sandbox/faust/: channeleq.dsp  nuclear.lib
trunk/sandbox/graph/: engine.cpp  engine.h
trunk/sandbox/jack_client/: CMakeLists.txt  demo2.cpp  demo3.cpp  demo4.cpp  organ_voice.h  osci.dsp.in  osci_voice.h  simple_monophonic.cpp  simple_organ.cpp  simple_polyphonic.cpp
trunk/sandbox/juce/tutorial1/: CMakeLists.txt  MainAppWindow.cpp
trunk/sandbox/lv2_plugin/: CMakeLists.txt  test.cpp
trunk/sandbox/performer/: CMakeLists.txt  jack_client.h  sequencer.cpp
trunk/sdk/: UI.h  audio_processor.h  dsp.h  engine.h  midi.h  midi_processor.h  namespaces.h  paramui.h  processor.h  synth.h  types.h  voice.h
trunk/sdk/common/: CMakeLists.txt  exception.h  oscui.h  paramui.h  utility.h
trunk/sdk/dssi/: dssi_descriptor_builder.h
trunk/sdk/dssi/common/: dssi_descriptor_builder.h  dssi_plugin.h
trunk/sdk/faust/: CMakeLists.txt  UI.h  dsp.h
trunk/sdk/faust/common/: paramui.h
trunk/sdk/jack/common/: CMakeLists.txt  jack_client.h
trunk/sdk/ladspa/: CMakeLists.txt  namespace.h
trunk/sdk/ladspa/common/: ladspa_descriptor_builder.h  ladspa_plugin.h
trunk/sdk/lv2/: namespace.h
trunk/sdk/lv2/common/: CMakeLists.txt  lv2_mapper.h  lv2_plugin.h
trunk/sdk/rdf/: CMakeLists.txt
trunk/sdk/rdf/common/: CMakeLists.txt
trunk/tests/: CMakeLists.txt  lv2_plugin.cpp
trunk/toys/graph/: CMakeLists.txt  types.h
trunk/toys/jack_client/: CMakeLists.txt  demo1.cpp  demo2.cpp  demo3.cpp  jack_client.cpp
trunk/toys/performer/: commands.h  jack_client.cpp  jack_client.h  main.cpp  sequencer.cpp  sequencer.h
trunk/tutorials/jack/tutorial1/: jack_client.h
trunk/tutorials/juce/tutorial1/: MainAppWindow.h  MainComponent.h
tutorials/jack/jack_client/: CMakeLists.txt
tutorials/jack/tutorial1/: jack_client.cpp  jack_client.h
tutorials/juce/tutorial1/: ApplicationStartup.cpp
wiki/: AtomicNodes.wiki  BuildingBlockNodes.wiki  Cesium80.wiki  CodeGenerator.wiki  Controller.wiki  CubicWaveshaper.wiki  Design.wiki  DeveloperReadingList.wiki  DigitalFilters.wiki  EngineArchitecture.wiki  EngineGUI.wiki  FormantFilter.wiki  Grouping.wiki  IntegratedDevelopmentEnvironment.wiki  KeyFrameParameterization.wiki  LowLatencyFFT.wiki  NuclearGUIConcepts.wiki  OldFrontPage.wiki  Oversampling.wiki  Polyphony.wiki  PolyphonyAndOversampling.wiki  Requirements.wiki  ResonanceFilter.wiki  SmartMatrix.wiki  SoftwareDevelopmentKit.wiki  TheBasicDesign.wiki  Uranium.wiki
