PROJECT(sdk)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

INSTALL(TARGETS sdk
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION ${NUCLEAR_LIBDIR}
  ARCHIVE DESTINATION ${NUCLEAR_LIBDIR})
INSTALL(FILES ${HEADERS} DESTINATION include/nuclear/sdk)
