PROJECT(nuclear-sdk)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(dssi)
ADD_SUBDIRECTORY(faust)
ADD_SUBDIRECTORY(jack)
ADD_SUBDIRECTORY(ladspa)
ADD_SUBDIRECTORY(lv2)
ADD_SUBDIRECTORY(rdf)

INSTALL(FILES ${HEADERS} DESTINATION include/nuclear/sdk)
