PROJECT(nuclear)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

SET(Required_Packages
  Boost
  )

FOREACH(Package ${Required_Packages})
  LOADPACKAGE(${Package})
ENDFOREACH(Package)

ADD_LIBRARY(nuclear SHARED ${HEADERS} ${SOURCES})

INSTALL(TARGETS nuclear
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)
INSTALL(FILES ${HEADERS} DESTINATION include/nuclear/sdk)
